--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -9,6 +9,7 @@
 
 .row {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   padding: 0 4px;
   text-align: center;
@@ -16,10 +17,12 @@
 
 /* Create two equal columns that sits next to each other */
 .column {
-  flex: 50%;
-  max-width: 50%;
-  padding: 0 4px;
+  flex: 1;
 }
+
+/*   flex: 32%;
+  max-width: 32%;
+  padding: 0 4px; */
 
 /* .lastcolumn {
   align-items: flex-end;
@@ -29,6 +32,11 @@
 } */
 
 .midcolumn {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.innercolumn {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -55,8 +63,7 @@
   }
 
   .column {
-    flex: 50%;
-    max-width: 50%;
+    flex: 1;
   }
   .lastcolumn {
     display: flex;
@@ -76,13 +83,8 @@
     margin: 0 auto;
   }
   .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-  .lastcolumn {
-    display: flex;
-    text-align: center;
-    justify-content: center;
+    flex: 100%;
+    max-width: 100%;
   }
 }
 
@@ -99,10 +101,5 @@
   .column {
     flex: 100%;
     max-width: 100%;
-  }
-  .lastcolumn {
-    display: flex;
-    text-align: center;
-    justify-content: center;
   }
 }
