--- a/src/components/introduction.module.css
+++ b/src/components/introduction.module.css
@@ -1,97 +1,3 @@
-/* .main {
-  display: flex;
-  row-gap: 40px;
-  column-gap: 40px;
-  align-items: stretch;
-  flex-direction: row;
-  margin-top: 50px;
-  justify-content: center;
-  align-items: center;
-}
-.logodomus {
-  width: 106px;
-  height: 80px;
-}
-
-.linkdomus {
-  color: var(--azul-efata);
-}
-
-.leftcontainer {
-  flex-grow: 1;
-  flex-shrink: 1;
-  width: 600px;
-  font-size: var(--text-xl);
-}
-.rightcontainer {
-  flex-grow: 1;
-  flex-shrink: 1;
-  width: 600px;
-}
-.container {
-  font-size: var(--text-lg);
-  margin-top: var(--space-lg);
-  padding: var(--space-2xl) 0;
-  text-align: center;
-}
-
-.container a {
-  border-bottom: 1.5px solid transparent;
-  font-weight: var(--medium);
-}
-
-.container a:hover {
-  border-bottom-color: var(--primary);
-  color: var(--primary);
-} 
-
-@media (max-width: 1030px) {
-  iframe {
-    width: 500px;
-    height: 220px;
-  }
-  .leftcontainer {
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 500px;
-    font-size: var(--text-md);
-  }
-}
-
-@media (max-width: 870px) {
-  .main {
-    flex-direction: column;
-  }
-  iframe {
-    width: 500px;
-    height: 220px;
-  }
-  .leftcontainer {
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 500px;
-    font-size: var(--text-lg);
-  }
-}
-
-
-@media (max-width: 705px) {
-  .main {
-    flex-direction: column;
-  }
-  iframe {
-    width: 540px;
-    height: 260px;
-  }
-  .leftcontainer {
-    flex-grow: 1;
-    flex-shrink: 1;
-    width: 500px;
-    font-size: var(--text-lg);
-  }
-}
-*/
-
 .container {
   font-size: var(--text-lg);
   margin-top: var(--space-lg);
@@ -123,6 +29,21 @@
   padding: 20px 4px;
 }
 
+.video {
+  display: flex;
+  justify-content: right;
+  margin: 0 !important;
+}
+
+.video > video {
+  margin: 0 !important;
+}
+
+iframe {
+  width: 462px;
+  height: 260px;
+}
+
 @media (max-width: 1300px) {
   .container {
     font-size: var(--text-lg);
@@ -145,7 +66,7 @@
     align-items: center;
   }
   iframe {
-    width: 500px;
+    width: 390px;
     height: 220px;
   }
 }
@@ -179,6 +100,13 @@
   }
 }
 
+@media (max-width: 999px) {
+  iframe {
+    width: 462px;
+    height: 260px;
+  }
+}
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
   .container {
@@ -200,7 +128,7 @@
     align-items: center;
   }
   iframe {
-    width: 440px;
+    width: 284px;
     height: 160px;
   }
 }
