--- a/src/components/whatsappCall.module.css
+++ b/src/components/whatsappCall.module.css
@@ -1,4 +1,11 @@
 .icon {
-  width: 55px;
-  height: 55px;
+  width: 45px;
+  height: 45px;
+}
+
+@media (max-width: 1024px) {
+  .icon {
+    width: 35px;
+    height: 35px;
+  }
 }
